import Foundation
import ArgumentParser
import Logging
import OmertaCore
import OmertaVM
import OmertaProvider

@main
struct OmertaDaemon: AsyncParsableCommand {
    static var configuration = CommandConfiguration(
        commandName: "omertad",
        abstract: "Omerta provider daemon - execute compute jobs from network peers",
        version: "0.3.0 (Phase 3: Provider Mode)",
        subcommands: [
            Start.self,
            Stop.self,
            Status.self,
            Config.self
        ],
        defaultSubcommand: Status.self
    )
}

// MARK: - Start Command

struct Start: AsyncParsableCommand {
    static var configuration = CommandConfiguration(
        abstract: "Start the provider daemon"
    )

    @Option(name: .long, help: "Port to listen on")
    var port: Int = 50051

    @Option(name: .long, help: "Maximum concurrent jobs")
    var maxJobs: Int = 1

    @Option(name: .long, help: "Owner peer ID (gets highest priority)")
    var ownerPeer: String?

    @Option(name: .long, help: "Trusted network IDs (comma-separated)")
    var trustedNetworks: String?

    @Flag(name: .long, help: "Enable activity logging")
    var activityLog: Bool = true

    @Option(name: .long, help: "Results storage path")
    var resultsPath: String?

    mutating func run() async throws {
        print("ğŸš€ Starting Omerta Provider Daemon...")
        print("")

        // Parse trusted networks
        let networks = trustedNetworks?.components(separatedBy: ",") ?? []

        // Create configuration
        let config = ProviderDaemon.Configuration(
            port: port,
            maxConcurrentJobs: maxJobs,
            ownerPeerId: ownerPeer,
            trustedNetworks: networks,
            enableActivityLogging: activityLog,
            resultsStoragePath: resultsPath
        )

        // Check dependencies
        print("Checking system dependencies...")
        let checker = DependencyChecker()
        do {
            try await checker.verifyProviderMode()
            print("âœ… All dependencies satisfied")
        } catch let error as DependencyChecker.MissingDependenciesError {
            print("\nâŒ Missing dependencies:")
            print(error.description)
            print("\nRun the installation script:")
            print("  curl -sSL https://raw.githubusercontent.com/omerta/omerta/main/Scripts/install.sh | bash")
            throw ExitCode.failure
        }
        print("")

        // Create and start daemon
        let daemon = ProviderDaemon(config: config)

        do {
            try await daemon.start()

            print("")
            print("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
            print("  Omerta Provider Daemon Running")
            print("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
            print("")
            print("Port: \(port)")
            print("Max concurrent jobs: \(maxJobs)")
            if let owner = ownerPeer {
                print("Owner peer: \(owner)")
            }
            if !networks.isEmpty {
                print("Trusted networks: \(networks.joined(separator: ", "))")
            }
            print("")
            print("Press Ctrl+C to stop")
            print("")

            // Keep running until interrupted
            // Note: In a real production daemon, use proper signal handling
            // For now, just keep the task alive
            print("Note: Use Ctrl+C to stop the daemon")

            // Keep running indefinitely (sleep for a very long time)
            try await Task.sleep(for: .seconds(60 * 60 * 24 * 365))  // 1 year

        } catch {
            print("âŒ Failed to start daemon: \(error)")
            throw ExitCode.failure
        }
    }
}

// MARK: - Stop Command

struct Stop: AsyncParsableCommand {
    static var configuration = CommandConfiguration(
        abstract: "Stop the provider daemon"
    )

    mutating func run() async throws {
        print("â¹ Stopping Omerta Provider Daemon...")

        // In a real implementation, this would:
        // 1. Find the running daemon process (PID file)
        // 2. Send SIGTERM signal
        // 3. Wait for graceful shutdown
        // 4. Send SIGKILL if timeout

        print("âš ï¸  Not yet implemented")
        print("For now, use Ctrl+C in the terminal running 'omertad start'")
    }
}

// MARK: - Status Command

struct Status: AsyncParsableCommand {
    static var configuration = CommandConfiguration(
        abstract: "Show provider daemon status"
    )

    @Flag(name: .long, help: "Show detailed queue information")
    var detailed: Bool = false

    mutating func run() async throws {
        print("Omerta Provider Daemon")
        print("Version: 0.3.0 (Phase 3: Provider Mode)")
        print("")

        // In a real implementation, this would connect to running daemon
        // For now, just show static status

        print("Status: âš ï¸  Not Running")
        print("")
        print("To start the daemon:")
        print("  omertad start --port 50051")
        print("")
        print("Configuration:")
        print("  â€¢ Provider daemon accepts compute jobs from network peers")
        print("  â€¢ Jobs are filtered based on rules and trusted networks")
        print("  â€¢ Each job runs in an isolated VM with VPN routing")
        print("  â€¢ Activity logging tracks all job submissions")
        print("")
        print("Available commands:")
        print("  start   - Start the provider daemon")
        print("  stop    - Stop the daemon")
        print("  status  - Show daemon status (this)")
        print("  config  - Manage daemon configuration")
    }
}

// MARK: - Config Command

struct Config: AsyncParsableCommand {
    static var configuration = CommandConfiguration(
        abstract: "Manage provider daemon configuration",
        subcommands: [
            ConfigShow.self,
            ConfigTrust.self,
            ConfigBlock.self
        ]
    )
}

struct ConfigShow: AsyncParsableCommand {
    static var configuration = CommandConfiguration(
        commandName: "show",
        abstract: "Show current configuration"
    )

    mutating func run() async throws {
        print("Provider Daemon Configuration")
        print("============================")
        print("")
        print("Port: 50051 (default)")
        print("Max concurrent jobs: 1 (default)")
        print("Activity logging: enabled")
        print("")
        print("Trusted networks: (none configured)")
        print("Blocked peers: (none)")
        print("")
        print("Filter rules:")
        print("  â€¢ Resource Limits: enabled")
        print("    - Max CPU: 8 cores")
        print("    - Max Memory: 16384 MB")
        print("    - Max Runtime: 3600 seconds")
        print("  â€¢ Quiet Hours: enabled")
        print("    - Hours: 22:00 - 08:00 (require approval)")
        print("")
        print("âš ï¸  Dynamic configuration management not yet implemented")
        print("Edit configuration file or restart with different flags")
    }
}

struct ConfigTrust: AsyncParsableCommand {
    static var configuration = CommandConfiguration(
        commandName: "trust",
        abstract: "Add a trusted network"
    )

    @Argument(help: "Network ID to trust")
    var networkId: String

    mutating func run() async throws {
        print("âœ… Added trusted network: \(networkId)")
        print("")
        print("âš ï¸  Configuration will be applied on next daemon restart")
        print("For live configuration changes, use the gRPC API (Phase 4)")
    }
}

struct ConfigBlock: AsyncParsableCommand {
    static var configuration = CommandConfiguration(
        commandName: "block",
        abstract: "Block a peer"
    )

    @Argument(help: "Peer ID to block")
    var peerId: String

    mutating func run() async throws {
        print("ğŸš« Blocked peer: \(peerId)")
        print("")
        print("âš ï¸  Configuration will be applied on next daemon restart")
        print("For live configuration changes, use the gRPC API (Phase 4)")
    }
}
